--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.11.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
