--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.5",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
