--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
+    "firebase": "^9.15.0",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
