--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
+    "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.15.0",
     "next": "13.1.2",
