--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "better-react-spinkit": "^2.0.4",
     "email-validator": "^2.0.4",
     "firebase": "^9.15.0",
+    "moment": "^2.29.4",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
